# NovelBot

./: .gitignore  README.md  build.bat  check_environment.ps1  clean_wizard.bat  dev.bat  install_dependencies.bat  package.json  run_stable.bat
novel_bot/: config.toml  main.py  pyproject.toml
novel_bot/data/: mynovelbot.db
novel_bot/src/plugins/ai_chat_system/: api.py  api_manager.py  constants.py  data_manager.py  generation_pipeline.py  generators.py  global_state.py  music_service.py  prompt_builder.py  scheduler.py  session_manager.py
novel_bot/src/plugins/ai_chat_system/api_routes/: aigc.py  auth.py  character.py  community.py  data_crud.py  data_management.py  generation.py  memory.py  music.py  semantic_retrieval.py  session.py  system.py  system_config.py  tasks.py  tts.py  user_profile.py  websocket.py
novel_bot/src/plugins/ai_chat_system/database/: models.py  session.py
novel_bot/src/plugins/ai_chat_system/llm_services/: __init__.py  base.py  google_gemini.py  koboldai_horde.py
novel_bot/src/plugins/ai_chat_system/services/: archival_service.py  community_service.py  connection_manager.py  data_loader.py  data_persistence.py  file_watcher.py  initialization.py  security_utils.py  system_utils.py  task_manager.py  tts_merger.py  tts_service.py  user_service.py
novel_bot/src/plugins/ai_chat_system/services/drawing/: config.py  image_analyzer.py  main_service.py
novel_bot/src/plugins/ai_chat_system/services/drawing/providers/: __init__.py  _utils.py  local_sd.py  mage_space.py  perchance.py  prodia.py  stable_horde.py
novel_bot/src/plugins/ai_chat_system/tools/: web_search.py
novel_bot/src/plugins/ai_chat_system/utils/: api_utils.py  file_parser.py
tools/: db_to_json.py  db_toolkit.py  migrate_legacy_data.py  rebuild_database_from_export.py  run_db_toolkit.bat  run_migration.bat  run_rebuild.bat
web-ui/: .eslintrc.cjs  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
web-ui/components/: AppSidebar.vue  DevLogViewer.vue
web-ui/composables/: useAllData.ts  useDataMutations.ts  (+6 more)
(+193 files in other folders)
