[project]
name = "novel-bot-backend"
version = "0.2.0"
description = "MyNovelBot backend."
requires-python = ">=3.9, <4.0"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.20.0",
    "gmssl>=3.2.0",
    "gradio-client>=0.10.0",
    "Pillow>=9.0.0",
    "beautifulsoup4",
    "pypdf",
    "openpyxl",
    "ddgs",
    "pytz",
    "edge-tts>=6.1.9",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "google-cloud-storage>=2.10.0",
    "apscheduler>=3.10.0",
    "sqlalchemy[asyncio]>=2.0.31, <3.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "json5>=0.9.14",
    "aiosqlite>=0.20.0",
    "python-dateutil>=2.9.0"
]

[tool.poetry]
packages = [
    { include = "main.py" },
    { include = "src" },
]

[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"

[tool.mypy]
ignore_missing_imports = true
exclude = ['\\.venv/']